// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Current Incentive level should render the current Incentive level correctly when user can maintain Incentive level 1`] = `
<div
  className="current-iep sc-ifAKCX kQggjh"
>
  <div
    className="sc-bdVaJa gkOpjT"
  >
    <div
      className="sc-bwzfXH gDjOjU"
    >
      <strong
        className="label"
      >
        Current Incentive level
      </strong>
      <p>
        Standard
      </p>
    </div>
    <div
      className="sc-bwzfXH gDjOjU"
    >
      <strong
        className="label"
      >
        Time since review
      </strong>
      <p>
        625
      </p>
    </div>
    <div
      className="sc-bwzfXH gDjOjU"
    >
      <strong
        className="label"
      >
        Date of next review
      </strong>
      <p>
        15/08/2018
      </p>
    </div>
    <div
      className="sc-bwzfXH gDjOjU"
    >
      <div>
        <button
          className="sc-htpNat dZoydM"
          data-qa="change-iep"
          disabled={false}
          onClick={[Function]}
        >
          Change Incentive level
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Current Incentive level should render the current Incentive level correctly when user can't maintain Incentive level 1`] = `
<div
  className="current-iep sc-ifAKCX kQggjh"
>
  <div
    className="sc-bdVaJa gkOpjT"
  >
    <div
      className="sc-bwzfXH gDjOjU"
    >
      <strong
        className="label"
      >
        Current Incentive level
      </strong>
      <p>
        Standard
      </p>
    </div>
    <div
      className="sc-bwzfXH gDjOjU"
    >
      <strong
        className="label"
      >
        Time since review
      </strong>
      <p>
        625
      </p>
    </div>
    <div
      className="sc-bwzfXH gDjOjU"
    >
      <strong
        className="label"
      >
        Date of next review
      </strong>
      <p>
        15/08/2018
      </p>
    </div>
  </div>
</div>
`;
